Messing with changing the CSS

--- a/themes/block-theme-custom/style.css
+++ b/themes/block-theme-custom/style.css
@@ -30,3 +30,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
 }
+
+.is-style-fancy-paragraph{
+	color: green;
+}
