--- a/themes/block-theme-custom/style.css
+++ b/themes/block-theme-custom/style.css
@@ -31,6 +31,11 @@ body {
 	-webkit-font-smoothing: antialiased;
 }
 
+/* NAVIGATION */
+.is-style-cust-navigation{
+	justify-content: space-around;
+}
+
 .is-style-fancy-paragraph{
 	color: green;
 }
