CSS Change to WooCommerce

--- a/themes/block-theme-custom/style.css
+++ b/themes/block-theme-custom/style.css
@@ -151,3 +151,8 @@ h1{
 .wc-block-mini-cart__button{
 	float: right;
 }
+
+/* Woo Commerce */
+.wp-block-button__link.wp-element-button.add_to_cart_button.wc-block-components-product-button__button{
+	background-color: rgb(213,79,191);
+}
