Changed Button bg colour

--- a/themes/block-theme-custom/style.css
+++ b/themes/block-theme-custom/style.css
@@ -159,3 +159,6 @@ h1{
 .single_add_to_cart_button{
 	background-color: rgb(213,79,191);
 }
+.wc-block-components-checkout-place-order-button{
+	background-color: rgb(213,79,191);
+}
