Changed Hover Colour

--- a/themes/block-theme-custom/style.css
+++ b/themes/block-theme-custom/style.css
@@ -162,3 +162,6 @@ h1{
 .wc-block-components-checkout-place-order-button{
 	background-color: rgb(213,79,191);
 }
+.wc-block-components-product-name:hover{
+	color: gray;
+}
