--- a/themes/block-theme-custom/style.css
+++ b/themes/block-theme-custom/style.css
@@ -165,3 +165,6 @@ h1{
 .wc-block-components-product-name:hover{
 	color: gray;
 }
+.wc-block-components-button{
+	background-color: rgb(213,79,191);
+}
