--- a/themes/block-theme-custom/style.css
+++ b/themes/block-theme-custom/style.css
@@ -162,6 +162,9 @@ h1{
 .wc-block-components-checkout-place-order-button{
 	background-color: rgb(213,79,191);
 }
+.wc-block-components-checkout-place-order-button:hover{
+	background-color: rgb(118, 45, 105);
+}
 .wc-block-components-product-name:hover{
 	color: gray;
 }
