--- a/themes/block-theme-custom/style.css
+++ b/themes/block-theme-custom/style.css
@@ -179,6 +179,8 @@ div.wpforms-container-full .wpforms-field-label{
 div.wpforms-container-full button{
 	background-color: rgb(213,79,191);
 }
+
+/* Hover */
 .wp-block-post-excerpt__more-link:hover{
 	color: gray;
 }
