--- a/themes/block-theme-custom/style.css
+++ b/themes/block-theme-custom/style.css
@@ -35,6 +35,9 @@ body {
 .is-style-cust-navigation{
 	justify-content: space-around;
 }
+a{
+	color: black;
+}
 
 /* LINE */
 .is-style-cust-separator{
@@ -46,7 +49,7 @@ body {
 	height: 200px;
 }
 
-/* ! Changing Text */
+/* ! Changing Text ************/
 .is-style-fancy-heading{
 	color: red;
 }
@@ -105,13 +108,18 @@ body {
 	margin: 0;
 } 
 
+
+
+/* ! BLOG PAGE */
+/* title */
+h1{
+	display: none;
+}
+/* query loop */
 .wp-block-columns-is-layout-flex {
 	padding: 15px;
 	border-radius: 5px;
 	background-color: rgb(193, 220, 229);
-	color: black;
-}
-a{
 	color: black;
 }
 .wp-block-column-is-layout-flow{
@@ -119,13 +127,6 @@ a{
 }
 .wp-block-post-excerpt__excerpt{
 	overflow: hidden;
-}
-
-
-/* ! BLOG PAGE */
-/* title */
-h1{
-	display: none;
 }
 
 
